# workeditor

./: CMakeLists.txt  README.md  configure  work.creator.user.2.5pre1  work.files  work.h  work.includes
common/: assert.h  intrusive.h  property.h
doc/: vis.txt
vis/: object.h  vis.cpp  vis.h
vis/event/: event.h  handlers.cpp  handlers.h  queue.cpp  queue.h
vis/term/: colors.h  common.h  driver.h  geometry.h  keyboard.h  mouse.h  term.cpp  term.h
vis/term/driver/: CMakeLists.txt  ncurs.cpp  ncurs.h
vis/term/driver/test/: CMakeLists.txt  test.cpp
vis/view/: desktop.h  state.h  view.cpp  view.h  window.h
